--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,8 @@ set -g status-bg colour234
 # font color
 set -g status-fg colour137
 
-# [session_name]
-set -g status-left-fg colour255
-set -g status-left-length 10
+# disable [session_name]
+set -g status-left ''
 
 # windows
 # current window
